// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse #export foo 1`] = `
[
  {
    "args": undefined,
    "end": 11,
    "kind": "export",
    "name": "foo",
    "start": 0,
  },
]
`;

exports[`parse #export foo(bar) 1`] = `
[
  {
    "args": [
      [
        "bar",
      ],
    ],
    "end": 16,
    "kind": "export",
    "name": "foo",
    "start": 0,
  },
]
`;

exports[`parse #export foo(bar, baz, boo) 1`] = `
[
  {
    "args": [
      [
        "bar",
        "baz",
        "boo",
      ],
    ],
    "end": 26,
    "kind": "export",
    "name": "foo",
    "start": 0,
  },
]
`;

exports[`parse #import foo 1`] = `
[
  {
    "args": [
      "foo",
    ],
    "kind": "directive",
    "name": "#import",
    "position": 11,
  },
]
`;

exports[`parse empty string 1`] = `[]`;
